--- a/styles/style.css
+++ b/styles/style.css
@@ -1,77 +1,124 @@
 
+
 :root {
-    --background: #3C343D;
-    --background-border: #6B626C;
+    --white: #FFF;
+    --gray: #F3F3F3;
+    --gray-mid: #9D9D9D;
+    --green-dark: #195321;
+    --gray-hover: #F7F7F7;
+    --body-background: #f2ffe7;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 1rem;
+    background-color: var(--body-background);
 }
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;  
+    box-sizing: border-box;
 }
 
-body {
-    font-family: Poppins;
-    height: 100vh;
-    padding: 2rem;
-    display: grid;
-    place-items: center;
-    background-color: var(--background);
+/* .Img-Container{
+    border-radius: 20px;
+    background-color: #195321;
+    width: 35%;
+    height: 100%;
 }
+.Img-Container img{
+    width: fit-content;
+} */
 
-.gallery {
+.tabs-container {
+	padding: 1rem;
     display: flex;
-    background-color: var(--background);
-    gap: 1rem;
+	margin: 0.75rem;
+	border-radius: 1rem;
+    background-color: var(--white);
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;	
 }
 
-.card {
+header {
     position: relative;
-    left: 0;
-    width: 9rem;
-    height: 10rem;
-    background-color: var(--background);
-    border-radius: 0.5rem;
-    transition: 1000ms all;
-    transform-origin: center left;
-    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
-    outline: 1px solid var(--background);
-    overflow: hidden;
 }
 
-.card img {
-    height: 10rem;
-    object-fit: cover;
-    border-radius: 0.25rem;
+.tab-content-wrapper {
+    overflow-y: hidden;
+    overflow-x: auto;
+    height: 18.75rem;
+    transition: all 0.45s ease-in-out;
+    padding: 0 1rem;
 }
 
-.card:hover {
-    cursor: pointer;
-    transform: scale(1.15);
+.tab-content h2 {
+    color: var(--green-dark);
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
 }
 
-.card:hover figcaption {
-    font-size: 0.6rem;
-    position: absolute;
-    height: 5rem;
-    width: 10rem;
+.tab-content {
+    font-size: 0.8rem;
+    min-height: 18.75rem;
+    min-width: 15rem;
+    overflow-x: auto;
+    transition: all 0.45s ease-in-out;
+}
+
+.tabs {
+    position: relative;
     display: flex;
-    align-items: end;
-    background: linear-gradient(
-        to top, 
-        rgba(0, 0, 0, 0.9) 0%,
-        rgba(0, 0, 0, 0) 100%
-    );
+    flex-direction: column;
+    border-right: 1px solid #F0F0F0;
+    list-style-type: none;
+    padding-right: 1rem;
+    gap: 0.5rem;
+}
+
+.tabs a {
+    position: relative;
+    display: flex;
+    text-decoration: none;
+    width: 100%;
+    font-size: 0.875rem;
+    font-weight: 600;
+    color: var(--gray-mid);
+    text-align: left;
+    border-radius: 0.5rem;
+    justify-content: start;
+    padding: 0.75rem;
+    align-items: center;
+    gap: 0.5rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.tabs a img {
+    height: 1.25rem;
+    width: 1.25rem;
+}
+
+.tabs .active, .tabs a:hover {
+    font-weight: 700;
+    outline: none;
     color: white;
-    left: 0;
-    bottom: 0;
-    padding-left: 0.75rem;
-    padding-bottom: 0.65rem;
+    background-color: var(--green-dark);
 }
 
-.card:hover ~ .card {
-    font-weight: bold;
-    cursor: pointer;
-    transform: translateX(1.3rem);
+.tabs a svg {
+    stroke: var(--gray-mid);
 }
 
+.tabs .active svg {
+    stroke: var(--white);
+}
+
+.tabs a:hover svg {
+    stroke: var(--white);
+}
