--- a/styles/index.css
+++ b/styles/index.css
@@ -2,26 +2,47 @@
   --bg-green: #dbf5d8;
   --primary-grren: #42b883;
   --secondary-grren: #1c7b50;
+  --text-grren: #124e33;
 }
 html {
 	font-size: 16px;
 	font-family: "Poppins";
 }
-
 body {
 	background: var(--bg-green);
-	height: 100%;
 }
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+/* SCROLLBAR CSS */
+::-webkit-scrollbar {
+	margin-top: 10px;
+	width: 10px;
+  }
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px 10px white;
+    border: solid 3px transparent;
+	border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 10px 10px var(--secondary-grren);
+    border: solid 3px transparent;
+	border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: var(--secondary-grren); 
+}
+.text-green{
+  color: var(--text-grren);
 }
 
 .faq-container {
   width: 50%;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
   gap: 1rem;
+  overflow-y: scroll;
 }
 
 details {
@@ -68,14 +89,14 @@ summary:hover .expand-icon {
 }
 
 .faq-title {
-  color: #1C2035;
+  color: var(--text-grren);
   width: 90%;
   opacity: 0.65;
   transition: all 250ms ease-in-out;
 }
 
 .faq-content {
-  color: #303651;
+  color: var(--text-grren);
   padding: 0.2rem 1rem 1rem 1rem;
   font-weight: 300;
   line-height: 1.5;
